syntax = "proto3";
package org.minigamzreborn.bytelyplay.protobuffer.enums;

enum ServerType {
  HUB = 0;
}